feat: huge login and buy section updated

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,17 @@
 @import "tailwindcss";
 
 
+.input-style {
+  @apply w-full px-4 py-3 rounded-md bg-[#0d1025] text-white border border-[#333] focus:outline-none focus:ring-2 focus:ring-blue-500;
+}
+/* In your main CSS or global Tailwind file */
+.loader {
+  border-top-color: transparent;
+  border-radius: 9999px;
+  animation: spin 0.75s linear infinite;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
